<resources>
    <string name="flavor_filename" translatable="false">flavors.json</string>

    <string name="app_name">Ice Cream Menu</string>
    <string name="app_name_short">IC Menu</string>
    <string name="main_header">Today\'s Flavors</string>
    <string name="main_header_admin">Today\'s Flavors (Admin)</string>
    <string name="tab1_header">Ice Cream</string>
    <string name="tab2_header">Gelato &amp; Sorbet</string>

    <string name="admin_edit_mode_header">Edit Flavors and Availability</string>
    <string name="autosave_description">Changes on this page are automatically saved.</string>
    <string name="checkbox_explanation">Tap a flavor to toggle availability.</string>

    <string name="add_flavor_header">Add New Flavor</string>
    <string name="edit_flavor_header">Edit Flavor</string>
    <string name="add_flavor_name_text">Flavor Name</string>
    <string name="add_flavor_desc_text">Flavor Description (Optional)</string>
    <string name="flavor_type_error_msg">Please specify a flavor type!</string>
    <string name="flavor_duplicate_error_msg">Another flavor already has this name!</string>
    <string name="add_flavor_case_no">Case # (Optional)</string>
    <string name="add_flavor_slot_desc">Slot within case</string>
    <string name="add_flavor_slot_caption">(From Customer Perspective)</string>
    <string name="delete_flavor">Delete This Flavor</string>

    <string name="delete_alert_title">Delete flavor?</string>
    <string name="delete_alert_message">This action cannot be undone.</string>
    <string name="delete_alert_positive">Yes</string>
    <string name="delete_alert_negative">No</string>

    <string name="title_activity_admin_edit">AdminEditActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
